small changes for mobile view

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Portfolio</title>
 </head>
@@ -59,13 +59,12 @@
           <span class="w3-text-white social" style="margin-top:050px">
             <p>Follow me on Social media</p>
             <div class="w3-margin-top">
-              <a href="#"><i class="fa fa-facebook-official w3-hover-opacity icons"></i></a>
-              <a href="#"><i class="fa fa-instagram w3-hover-opacity icons"></i></a>
-              <a href="#"><i class="fa fa-snapchat w3-hover-opacity icons"></i></a>
-              <a href="#"><i class="fa fa-pinterest-p w3-hover-opacity icons"></i></a>
-              <a href="#"><i class="fa fa-twitter w3-hover-opacity icons"></i></a>
-              <a href="www.linkedin.com/in/vaibhav7pratap7singh"><i
-                  class="fa fa-linkedin w3-hover-opacity icons"></i></a>
+              <a href="vaibhavpsingh179@gmail.com"><i class="fas fa-envelope w3-hover-opacity icons"></i></a>
+              <a href="https://leetcode.com/u/vaibhav7151/"  target="_blank" rel="noopener noreferrer" title="leetcode" style="color:#eac933;">    <i class="fas fa-code w3-hover-opacity icons" ></i></a>
+              <a href="wa.me/+919473963206"  target="_blank" rel="noopener noreferrer" title="whatsapp" style="color:#25D366;"><i class="fab fa-whatsapp w3-hover-opacity icons"></i></a>
+              <a href="https://github.com/vaibhavP712" target="_blank" rel="noopener noreferrer" >                                              <i class="fab fa-github w3-hover-opacity icons" ></i></a>
+              <a href="https://x.com/Vaibhav54319986" target="_blank" rel="noopener noreferrer" title="twitter" style="color:#1DA1F2;">      <i class="fab fa-twitter w3-hover-opacity icons" ></i></a>
+              <a href="https://www.linkedin.com/in/vaibhav7pratap7singh" target="_blank" rel="noopener noreferrer" title="LinkedIn" style="color:#0A66C2;">  <i class="fab fa-linkedin-in w3-hover-opacity icons"> </i></a>
             </div>
           </span>
         </div>
@@ -81,31 +80,31 @@
       <div class="game-list">
         <img src="sorting-pic.jpeg" alt="Project 1" style="width:100px; height: 100px;"  />
         
-        <a  href="https://github.com/vaibhavP712/Sorting-visualizer" onclick="myFunction()">
+        <a  href="https://github.com/vaibhavP712/Sorting-visualizer" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
           <h3>Sorting Visualiser</h3></a>
-        <a  href="https://github.com/vaibhavP712/Sorting-visualizer" onclick="myFunction()">
+        <a  href="https://github.com/vaibhavP712/Sorting-visualizer" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
         <p style="color: rgb(85, 91, 93);">&#60; Source code \&#62;</p></a>
       </div>
       <div class="game-list">
         <img src="chatbot_pic.jpeg" alt="Project 2" style="width:100px; height: 100px;" />
         
-        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()">
+        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
         <h3>Chatbot in Python</h3></a>          
-        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()">
+        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
         <p style="color: rgb(85, 91, 93);"> &#60; Source code \&#62;</p></a>
       </div>
       <div class="game-list">
         <img src="emoji.jpeg" alt="Project 3" style="width:100px; height: 100px;" />        
-        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()">
+        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
         <h3>Portfolio</h3></a>        
-        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()">
+        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
         <p style="color: rgb(85, 91, 93);">&#60; Source code \&#62;</p></a>
       </div>
       <div class="game-list">
         <img src="ticTac-pic.png" alt="Project 4" style="width:100px; height: 100px;" />        
-        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()">
+        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
         <h3>Tic Tac Toe</h3></a>
-        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()">
+        <a  href="https://github.com/vaibhavP712/" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
         <p style="color: rgb(85, 91, 93);"> &#60; Source code \&#62;</p></a>
       </div>
       <div class="game-list">
@@ -118,9 +117,6 @@
         <h3>Unified Messaging</h3>
         <p style="color: rgb(85, 91, 93);">Releasing soon...</p>
       </div>
-
-      <div class="absolute inset-auto z-50 h-36 -translate-y-1/2 rounded-full bg-[#18ACFE] blur-3xl md:w-[28rem]"
-        style="opacity: 0.5;"></div>
     </div>
 
     <div class="store" id="shop">
@@ -170,10 +166,10 @@
         </div>
         <div class="game-store-list">
           <div class="game-image">
-            <img src="robot.jpeg" alt="Inspiration 4" />
+            <img src="robot2.jpg" alt="Inspiration 4" />
           </div>
           <div class="store-text-description">
-            <h4 style="align-self: center;">Robots</h4>
+            <h4 style="align-self: center;">Cyborg</h4>
             <span></span>
             <span></span>
           </div>
@@ -201,11 +197,11 @@
           <p>Gharuan, Mohali, Punjab</p>
 
           <h2 class="badge" style="background-color: orange; color:#000015; padding:10px">#Completed</h2>
-          <h1 class="event-title">Intermediate</h1>
+          <h1 class="event-title">Intermediate(PCM)</h1>
           <h4>The Aditya Birla Public School</h4>
           <p><i style="font-style: italic;">Percentage:</i> 81.2%</p>
 
-          <h1>High School</h1>
+          <h1 class="event-title" >High School</h1>
           <h4>The Aditya Birla Public School</h4>
           <p><i style="font-style: italic;">Percentage:</i> 84.6%</p>
         </div>
@@ -224,25 +220,25 @@
     </div>
 
     <!-- Carve Your Words (Feedback Form) -->
-    <div>
+    <div >
       <h2 class="title">Carve your words</h2>
       <div class="contact" id="contact" style="padding-bottom: 10px !important;">
-        <div id="feedback" class="custom-section">
+        <div class="custom-section" id="feedback" >
           <form id="commentForm">
             <input type="text" id="name" placeholder="Name" autocomplete="name" required>
             <textarea id="message" placeholder="Message" autocapitalize="sentences" required></textarea>
             <button type="submit">Submit</button>
-          </form>
+          </form> 
           <!-- Added Containers for Messages and Loader -->
-          <div id="errorContainer" style="display: none; color: red; margin-top: 10px;"></div>
-          <div id="successContainer" style="display: none; color: green; margin-top: 10px;"></div>
-          <div id="loader" style="display: none; margin-top: 10px;">Loading...</div>
+          <div id="errorContainer" style="display: none; color: red; margin-top: 10px; object-position:center;"></div>
+          <div id="successContainer" style="display: none; color: green; margin-top: 10px; object-position: center;"></div>
+          <div id="loader" style="display: none; margin-top: 10px; object-position: center;">Loading...</div>
         </div>
       </div>
     </div>
   </main>
 
-  <footer>
+  <footer >
     <p>&copy; 2025 Vaibhav Pratap Singh</p>
   </footer>
   <script src="script.js"></script>
