updates for mobile view

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </div>
 
     <!-- Carve Your Words (Feedback Form) -->
-    <div >
+    <div  class="commentHead">
       <h2 class="title">Carve your words</h2>
       <div class="contact" id="contact" style="padding-bottom: 10px !important;">
         <div class="custom-section" id="feedback" >
