--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="game-store-list">
           <a href="https://github.com/vaibhavP712/" onclick="myFunction()" target="_blank" rel="noopener noreferrer">
             <div class="game-image">
-              <img src="emoji.jpeg" alt="Project 3" />
+              <img src="Screenshot (557).png" alt="Project 3" />
             </div>
             <div class="store-text-description">
               <h4 style="align-self: center;">Portfolio</h4>
