--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a href="vaibhavpsingh179@gmail.com"><i class="fas fa-envelope w3-hover-opacity icons"></i></a>
               <a href="https://leetcode.com/u/vaibhav7151/" target="_blank" rel="noopener noreferrer" title="leetcode"
                 style="color:#eac933;"> <i class="fas fa-code w3-hover-opacity icons"></i></a>
-              <a href="wa.me/+919473963206" target="_blank" rel="noopener noreferrer" title="whatsapp"
+              <a href="https://wa.me/919473963206?text=Hello%20Vaibhav...%2C%20I%20saw%20your%20portfolio!" target="_blank" rel="noopener noreferrer" title="whatsapp"
                 style="color:#25D366;"><i class="fab fa-whatsapp w3-hover-opacity icons"></i></a>
               <a href="https://github.com/vaibhavP712" target="_blank" rel="noopener noreferrer"> <i
                   class="fab fa-github w3-hover-opacity icons"></i></a>
