email link changed

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <span class="w3-text-white social" style="margin-top:050px">
             <p>Follow me on Social media</p>
             <div class="w3-margin-top">
-              <a href="vaibhavpsingh179@gmail.com"><i class="fas fa-envelope w3-hover-opacity icons"></i></a>
+              <a href="mailto:vaibhavpsingh179@gmail.com"><i class="fas fa-envelope w3-hover-opacity icons"></i></a>
               <a href="https://leetcode.com/u/vaibhav7151/" target="_blank" rel="noopener noreferrer" title="leetcode"
                 style="color:#eac933;"> <i class="fas fa-code w3-hover-opacity icons"></i></a>
               <a href="https://wa.me/919473963206?text=Hello%20Vaibhav...%2C%20I%20saw%20your%20portfolio!" target="_blank" rel="noopener noreferrer" title="whatsapp"
