--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             help in their consequent success.
           </p>
           <span class="w3-text-white social" style="margin-top:050px">
-            <p>Follow me on Social media</p>
+            <p>Contact me</p>
             <div class="w3-margin-top">
               <a href="mailto:vaibhavpsingh179@gmail.com"><i class="fas fa-envelope w3-hover-opacity icons"></i></a>
               <a href="https://leetcode.com/u/vaibhav7151/" target="_blank" rel="noopener noreferrer" title="leetcode"
